# enterprise-knowledge-qa-agent

./: CHANGELOG.md  Dockerfile  Makefile  README.md  RELEASE_CANDIDATE_MANIFEST.md  RELEASE_NOTES.md  docker-compose.yml  pyproject.toml
data/: engineering_incident_review.md  hr_policy.md  product_release.md  security_sop.md
docs/: api.md  architecture.md  deployment.md  evaluation.md  interview_pitch.md  reproducibility.md  roadmap.md
examples/: ask_request.json  expected_answer.md
scripts/: smoke_test.py
src/app/: agent.py  cli.py  feedback.py  main.py  retriever.py
tests/: test_agent.py  test_api.py  test_container_config.py  test_smoke.py
